# Copyright (c) 2015-2017 Vivaldi Technologies AS. All rights reserved

import("//vivaldi/testing/testing.gni")

update_target("//chrome/browser:browser") {
  public_deps += [
    "//vivaldi/components:adverse_adblocking",
    "//vivaldi/components/bookmarks:bookmark_locales_include",
    "//vivaldi/components/content_injection",
    "//vivaldi/components/request_filter",
    "//vivaldi/components/request_filter/adblock_filter",
    "//vivaldi/components/page_actions",
  ]
  allow_circular_includes_from += [
    "//vivaldi/components:adverse_adblocking",
    "//vivaldi/components/request_filter",
    "//vivaldi/components/request_filter/adblock_filter",
  ]
  deps += [
    "//vivaldi/components/datasource:dataurl",
    "//vivaldi/components/request_filter/adblock_filter",
    "//vivaldi/components/request_filter/adblock_filter/mojom"
  ]
}

update_target("//chrome/renderer:renderer") {
  deps += [
    "//vivaldi/components/request_filter/adblock_filter/renderer",
    "//vivaldi/components/content_injection/renderer",
    "//vivaldi/components/translate/renderer",
  ]
}

if (vivaldi_build_tests) {
  update_target("//components:components_unittests") {
      deps += [
        "//vivaldi/components/request_filter/adblock_filter:unit_tests",
        "//vivaldi/components/datasource:dataurl_unit_tests",
      ]
  }
}
