# Copyright (c) 2015-2017 Vivaldi Technologies AS. All rights reserved

import("//vivaldi/testing/testing.gni")

update_target("//chrome/browser:browser") {
  public_deps += [
    "//vivaldi/components:adverse_adblocking",
    "//vivaldi/components/bookmarks:bookmark_locales_include",
    "//vivaldi/components/content_injection",
    "//vivaldi/components/notes",
    "//vivaldi/components/notes:browser",
    "//vivaldi/components/request_filter",
    "//vivaldi/components/ad_blocker",
    "//vivaldi/components/page_actions",
    "//vivaldi/components/signature:signature",
  ]
  allow_circular_includes_from += [
    "//vivaldi/components:adverse_adblocking",
    "//vivaldi/components/notes",
    "//vivaldi/components/notes:browser",
    "//vivaldi/components/request_filter",
    "//vivaldi/components/ad_blocker",
  ]
  deps += [
    "//vivaldi/components/datasource:resource_reader",
    "//vivaldi/components/ad_blocker",
    "//vivaldi/components/request_filter/adblock_filter/mojom",
    "//vivaldi/components:user_agent",
  ]
}

update_target("//chrome/renderer:renderer") {
  deps += [
    "//vivaldi/components/content_injection/renderer",
    "//vivaldi/components/translate/renderer",
  ]
}

update_target("//components/sync_bookmarks:sync_bookmarks") {
  deps += [
    "//vivaldi/sync/file_sync",
    "//vivaldi/components/datasource:data_url_utils",
  ]
}

if (!is_ios) {
  update_template_instance("//components/resources:components_resources") {
    deps += [
      "//vivaldi/components/request_filter/adblock_filter/interstitial:bundle_js_document_blocked_interstitial",
    ]
  }
}

if (vivaldi_build_tests) {
  update_target("//components:components_unittests") {
      deps += [
        "//vivaldi/components/ad_blocker:unit_tests",
        "//vivaldi/components/datasource:dataurl_unit_tests",
        "//vivaldi/components/notes:unit_tests",
        "//vivaldi/components/direct_match:unit_tests"
      ]
  }
}

update_template_instance("//components/feed/core/proto:proto_v2") {
  if (!defined(deps)) {
    deps = []
  }
  deps += [ "//components/feed/core/proto:proto_ios_shared_v2" ]
}

update_target("//chrome:dependencies") {
  public_deps += [ "//vivaldi/components/notes:browser" ]
}

if (is_android) {
  update_target("//chrome:chrome_android_core") {
    deps += [ "//vivaldi/components/notes" ]
  }
}

update_template_instance("//third_party/blink/renderer/core:core") {
  deps += [
    "//vivaldi/components:user_agent",
  ]
}

update_template_instance("//content/common:common") {
  deps += [
    "//vivaldi/components:user_agent",
  ]
}
