import ("//vivaldi/testing/testing.gni")

update_target("//components/bookmarks/browser:browser") {
  sources += [
    "//vivaldi/components/bookmarks/vivaldi_bookmark_node.cc",
    "//vivaldi/components/bookmarks/vivaldi_bookmark_kit.cc",
    "//vivaldi/components/bookmarks/vivaldi_partners.cc",
    "//vivaldi/components/bookmarks/vivaldi_partners.h",
    "//vivaldi/components/locale/locale_kit.cc",
    "//vivaldi/components/locale/locale_kit.h",
  ]
  public += [
    "//vivaldi/components/bookmarks/vivaldi_bookmark_kit.h",
    "//vivaldi/components/bookmarks/vivaldi_partners.h",
  ]
  deps += [ "//vivaldi/components/datasource:resource_reader" ]
}

update_target("//components/history/core/browser:browser") {
  sources += [
    "//vivaldi/components/history/vivaldi_history_backend.cc",
    "//vivaldi/components/history/vivaldi_history_service.cc",
    "//vivaldi/components/history/vivaldi_url_database.cc",
    "//vivaldi/components/history/vivaldi_visit_database.cc",
  ]
}

update_target("//components/sessions:sessions") {
  sources += [
    "//vivaldi/components/sessions/live_tab_context.cc",
    "//vivaldi/components/sessions/tab_restore_service_client.cc",
  ]
}

update_target("//components/sessions:shared") {
  sources += [
    "//vivaldi/components/sessions/vivaldi_session_service_commands.cc",
    "//vivaldi/components/sessions/vivaldi_session_service_commands.h",
  ]
}

if (is_mac || is_ios) {
  update_target("//components/os_crypt/sync:os_crypt") {
    sources += [
      "//vivaldi/components/os_crypt/viv_keychain_password_mac.mm",
    ]
  }
}

update_target("//components/search_engines:search_engines") {
  sources += [
    "//vivaldi/components/search_engines/vivaldi_pref_names.cc",
    "//vivaldi/components/search_engines/vivaldi_pref_names.h",
    "//vivaldi/components/search_engines/vivaldi_keyword_table.cc",
  ]
}

update_template_instance("//components/search_engines:prepopulated_engines") {
  source = "//vivaldi/components/search_engines/prepopulated_engines.json"
}

#Fix the Target generated by the prepopulated_engines template
update_target("//components/search_engines:prepopulated_engines_action") {
  # change the actual output folder from gen/vivaldi/components/search_engines
  # to gen/components/search_engines
  args += ["-b", rebase_path("$root_gen_dir/components/search_engines/")]
  # updates the path of the resulting files to be compiled to match the new
  # output folder
  outputs = []
  outputs = [
    "$root_gen_dir/components/search_engines/prepopulated_engines.cc",
    "$root_gen_dir/components/search_engines/prepopulated_engines.h",
  ]
}

update_target("//components/favicon/core:core") {
  sources += [
    "//vivaldi/components/favicon/vivaldi_favicons_backend.cc",
    "//vivaldi/components/favicon/vivaldi_preloaded_favicons.inc",
  ]
}
