import ("//vivaldi/testing/testing.gni")

update_target("//components/bookmarks/browser:browser") {
  sources += [
    "//vivaldi/components/bookmarks/vivaldi_bookmark_model.cc",
    "//vivaldi/components/bookmarks/vivaldi_bookmark_node.cc",
    "//vivaldi/components/bookmarks/vivaldi_bookmark_kit.cc",
    "//vivaldi/components/bookmarks/vivaldi_partners.cc",
    "//vivaldi/components/bookmarks/vivaldi_partners.h",
    "//vivaldi/components/bookmarks/vivaldi_titled_url_index.cc",
    "//vivaldi/components/locale/locale_kit.cc",
    "//vivaldi/components/locale/locale_kit.h",
  ]
  public += [
    "//vivaldi/components/bookmarks/vivaldi_bookmark_kit.h",
    "//vivaldi/components/bookmarks/vivaldi_partners.h",
  ]
  deps += [ "//vivaldi/components/datasource:resource_reader" ]
  if (is_vivaldi_automotive) {
    deps += [ "//chrome/android:chrome_jni_headers", ]
  }
}

update_target("//components/sync_bookmarks:sync_bookmarks") {
  sources += [
    "//vivaldi/components/sync_bookmarks/vivaldi_bookmark_model_view.cc"
  ]
}

update_target("//components/history/core/browser:browser") {
  sources += [
    "//vivaldi/components/history/vivaldi_history_backend.cc",
    "//vivaldi/components/history/vivaldi_history_service.cc",
    "//vivaldi/components/history/vivaldi_url_database.cc",
    "//vivaldi/components/history/vivaldi_visit_database.cc",
  ]
}

update_target("//components/omnibox/browser:browser") {
  sources += [
    "//vivaldi/components/omnibox/bookmark_nickname_match_utils.h",
    "//vivaldi/components/omnibox/bookmark_nickname_match_utils.cc",
    "//vivaldi/components/omnibox/bookmark_nickname_provider.h",
    "//vivaldi/components/omnibox/bookmark_nickname_provider.cc",
    "//vivaldi/components/omnibox/direct_match_provider.h",
    "//vivaldi/components/omnibox/direct_match_provider.cc",
  ]

  if (is_ios) {
    deps += [
      "//vivaldi/components/direct_match",
      "//vivaldi/ios/direct_match",
    ]
  }
}

update_target("//components/sync_sessions:sync_sessions") {
  sources += [
    "//vivaldi/components/sync_sessions/vivaldi_local_session_event_handler_impl.cc",
    "//vivaldi/components/sync_sessions/vivaldi_synced_session.cc",
    "//vivaldi/components/sync_sessions/vivaldi_specific.cc",
    "//vivaldi/components/sync_sessions/vivaldi_specific.h",
  ]
  if (!is_ios) {
    sources += [
      "//vivaldi/components/sync_sessions/vivaldi_local_session_observer.cc",
      "//vivaldi/components/sync_sessions/vivaldi_local_session_observer.h",
    ]
  }
}

update_target("//components/sessions:shared") {
  sources += [
    "//vivaldi/components/sessions/vivaldi_live_tab_context.cc",
    "//vivaldi/components/sessions/vivaldi_tab_restore_service_client.cc",
  ]
}

update_target("//components/sessions:shared") {
  sources += [
    "//vivaldi/components/sessions/vivaldi_session_service_commands.cc",
    "//vivaldi/components/sessions/vivaldi_session_service_commands.h",
  ]
}

if (is_mac || is_ios) {
  update_target("//components/os_crypt/sync:os_crypt") {
    sources += [
      "//vivaldi/components/os_crypt/viv_keychain_password_mac.mm",
    ]
  }
}

if (is_linux && use_dbus) {
  update_target("//components/os_crypt/sync:os_crypt") {
    sources += [
      "//vivaldi/components/os_crypt/xdg_desktop_portal_dbus.cc",
      "//vivaldi/components/os_crypt/xdg_desktop_portal_dbus.h",
      "//vivaldi/components/os_crypt/key_storage_xdg_desktop_portal.cc",
      "//vivaldi/components/os_crypt/key_storage_xdg_desktop_portal.h",
    ]

    defines += [ "USE_XDG_DESKTOP_PORTAL" ]
  }
}

update_template_instance("//components/search_engines:prepopulated_engines") {
  namespace = "TemplateURLPrepopulateDataOriginal"
}

update_target("//components/search_engines:prepopulated_engines_action") {
  # change the actual output folder from gen/vivaldi/components/search_engines
  # to gen/components/search_engines
  args += ["-b", rebase_path("$root_gen_dir/components/search_engines/original/")]
  # updates the path of the resulting files to be compiled to match the new
  # output folder
  outputs = []
  outputs = [
    "$root_gen_dir/components/search_engines/original/prepopulated_engines.cc",
    "$root_gen_dir/components/search_engines/original/prepopulated_engines.h",
  ]
}

update_target("//components/search_engines:search_engines") {
  if (!is_android) {
    sources -= [
      "search_engine_choice/generated_marketing_snippets.cc",
    ]
      sources += [
      "//vivaldi/components/search_engines/vivaldi_marketting_snippets_and_engine_resource_ids.cc"
      ]
  }

  sources += [
    "//vivaldi/components/search_engines/vivaldi_pref_names.h",
    "//vivaldi/components/search_engines/vivaldi_keyword_table.cc",
    "//vivaldi/components/search_engines/vivaldi_template_url_service.cc",
    "//vivaldi/components/search_engines/vivaldi_template_url_service.h"
  ]
}
update_target("//components/search_engines:search_engine_utils") {
  sources += [
    "//vivaldi/components/search_engines/parsed_search_engines.h",
    "//vivaldi/components/search_engines/parsed_search_engines.cc",
    "//vivaldi/components/search_engines/search_engines_manager.h",
    "//vivaldi/components/search_engines/search_engines_manager.cc",
    "//vivaldi/components/search_engines/search_engines_managers_factory.h",
    "//vivaldi/components/search_engines/search_engines_managers_factory.cc",
    "//vivaldi/components/search_engines/search_engines_helper.h",
    "//vivaldi/components/search_engines/search_engines_helper.cc",
    "//vivaldi/components/search_engines/prepopulated_engines.h",
    "//vivaldi/components/search_engines/parsed_search_engines_prompt.h",
    "//vivaldi/components/search_engines/parsed_search_engines_prompt.cc",
    "//vivaldi/components/search_engines/search_engines_prompt_manager.h",
    "//vivaldi/components/search_engines/search_engines_prompt_manager.cc"
  ]

  if (is_ios) {
    sources += [
      "//vivaldi/browser/search_engines/vivaldi_search_engines_updater.h",
      "//vivaldi/browser/search_engines/vivaldi_search_engines_updater.cc",
    ]
  }

  public_deps += [
  "//vivaldi/components:search_engines_inc",
  "//vivaldi/components:search_engines_prompt_inc",
  "//vivaldi/components/signature:signature"
  ]

  deps += [
    "//vivaldi/prefs:prefs_files_generated",
    "//vivaldi/components/ad_blocker"
  ]
}

if (!is_ios) {
  update_target("//third_party/blink/renderer/platform:platform") {
    sources -= [
      "search_engine_utils.cc",
      "search_engine_utils.h",
    ]
      deps -= [
      "//components/search_engines:search_engine_utils"
      ]
  }
}

update_target("//components/shared_highlighting/core/common:common") {
  deps -= [
    "//components/search_engines:search_engine_utils"
  ]
}

if (vivaldi_build_tests) {
  update_target("//components/search_engines:unit_tests") {
    sources -= [
      "template_url_prepopulate_data_unittest.cc",
      "template_url_service_util_unittest.cc",
      "search_engine_choice/search_engine_choice_service_unittest.cc"
    ]

    deps -= [
      ":prepopulated_engines"
    ]
  }

  update_target("//components/shared_highlighting/core/common:unit_tests") {
    sources -= [
      "shared_highlighting_metrics_unittest.cc"
    ]
  }

  update_target("//chrome/test:unit_tests") {
    sources -= [
      "../browser/ui/webui/settings/search_engines_handler_unittest.cc",
    ]
  }

  update_target("//chrome/browser/search_engine_choice:unit_tests") {
    sources -= [
      "search_engine_choice_dialog_service_unittest.cc",
    ]
  }


  if (!is_chrome_for_testing) {
    update_target("//chrome/browser/search_engine_choice:browser_tests") {
      sources -= [
        "search_engine_choice_dialog_browsertest.cc",
      ]
    }
  }

  update_template_instance("//chrome/test:browser_tests") {
    if (is_win || is_linux) {
      sources -= [
        "../browser/ui/webui/search_engine_choice/search_engine_choice_ui_browsertest.cc",
      ]
    }
    if (is_win || is_linux || is_mac) {
      sources -= [
        "../browser/search_engines/template_url_service_browsertest.cc",
      ]
    }
  }
}

update_target("//components/favicon/core:core") {
  sources += [
    "//vivaldi/components/favicon/vivaldi_favicons_backend.cc",
    "//vivaldi/components/favicon/vivaldi_preloaded_favicons.inc",
  ]
}
