
if (!is_android) {
  update_target("//chrome/browser/extensions:extensions") {
    sources += [
      "//vivaldi/components/bookmarks/vivaldi_bookmark_api_helpers.cc",
    ]
  }
}

update_target("//components/bookmarks/browser:browser") {
  sources += [
    "//vivaldi/components/bookmarks/titled_url_node.cc",
    "//vivaldi/components/bookmarks/vivaldi_bookmark_node.cc",
  ]
}

if (!is_android) {
  update_target("//components/guest_view/browser:test_support") {
    sources += [
      "//vivaldi/components/guest_view/vivaldi_guest_view_test_helper.cc",
    ]
  }

  update_target("//components/guest_view/common:common") {
    sources += [
      "//vivaldi/components/guest_view/vivaldi_guest_view_constants.cc",
      "//vivaldi/components/guest_view/vivaldi_guest_view_constants.h"
    ]
  }
}

update_target("//components/history/core/browser:browser") {
  sources += [
    "//vivaldi/components/history/vivaldi_top_sites.cc",
    "//vivaldi/components/history/vivaldi_url_database.cc",
    "//vivaldi/components/history/vivaldi_visit_database.cc",
  ]
}

update_target("//components/renderer_context_menu:renderer_context_menu") {
  sources += [
    "//vivaldi/components/menu/vivaldi_toolkit_delegate_views.cc",
  ]
}

update_target("//components/sessions:sessions") {
  sources += [
    "//vivaldi/components/sessions/live_tab_context.cc",
    "//vivaldi/components/sessions/tab_restore_service_client.cc",
  ]
}

update_target("//content/browser:browser") {
  sources += [
    "//vivaldi/components/content/vivaldi_browser_plugin_embedder.cc",
    "//vivaldi/components/content/vivaldi_render_view_host_impl.cc",
    "//vivaldi/components/content/vivaldi_renderers.cc",
    "//vivaldi/components/content/vivaldi_resources.cc",
    "//vivaldi/components/content/vivaldi_web_contents.cc",
  ]
}

update_template_instance("//content/public/browser:browser_sources") {
  sources += [
    "//vivaldi/components/content/vivaldi_public_resources.cc",
    "//vivaldi/components/content/vivaldi_web_contents_delegate.cc",
  ]
}

update_template_instance("//content/renderer:renderer") {
  sources += [
    "//vivaldi/components/content/vivaldi_render_views.cc",
  ]
}

if (!is_android) {
  update_target("//extensions/browser/api:api") {
    sources += [
      "//vivaldi/components/guest_view/vivaldi_guest_view_internal_api.cc",
    ]
  }

  update_template_instance("//extensions/browser:browser_sources") {
    sources += [
      "//vivaldi/components/browser/vivaldi_app_window.cc",
      "//vivaldi/components/browser/vivaldi_extension_host.cc",
      "//vivaldi/components/guest_view/vivaldi_web_view_permission_helper_delegate.cc",
    ]
  }

  update_template_instance("//extensions/common:common") {
    sources += [
      "//vivaldi/components/extensions/vivaldi_common_features.cc",
    ]
  }
}

update_template_instance("//third_party/blink/renderer/core/page:page") {
  sources += [
    "//vivaldi/components/blink/vivaldi_add_search_context_menu.cc",
    "//vivaldi/components/blink/vivaldi_add_search_context_menu.h"
  ]
}

update_template_instance("//third_party/blink/renderer/core/exported:exported") {
  sources += [
    "//vivaldi/components/blink/vivaldi_local_frame_client_impl.cc",
    "//vivaldi/components/blink/vivaldi_web_settings_impl.cc",
    "//vivaldi/components/blink/vivaldi_web_view_impl.cc",
  ]
}

update_template_instance("//third_party/blink/renderer/core/frame:frame") {
  sources += [
    "//vivaldi/components/blink/vivaldi_web_local_frame_impl.cc",
  ]
}

update_template_instance("//third_party/blink/renderer/platform/loader:loader") {
  sources += [
    "//vivaldi/components/blink/vivaldi_resource_fetcher.cc",
  ]
}
