import ("//vivaldi/testing/testing.gni")

update_target("//components/bookmarks/browser:browser") {
  sources += [
    "//vivaldi/components/bookmarks/vivaldi_bookmark_node.cc",
    "//vivaldi/components/bookmarks/vivaldi_bookmark_kit.cc",
    "//vivaldi/components/bookmarks/vivaldi_partners.cc",
    "//vivaldi/components/bookmarks/vivaldi_partners.h",
    "//vivaldi/components/locale/locale_kit.cc",
    "//vivaldi/components/locale/locale_kit.h",
  ]
  public += [
    "//vivaldi/components/bookmarks/vivaldi_bookmark_kit.h",
    "//vivaldi/components/bookmarks/vivaldi_partners.h",
  ]
}

update_target("//components/history/core/browser:browser") {
  sources += [
    "//vivaldi/components/history/vivaldi_history_backend.cc",
    "//vivaldi/components/history/vivaldi_history_service.cc",
    "//vivaldi/components/history/vivaldi_top_sites.cc",
    "//vivaldi/components/history/vivaldi_url_database.cc",
    "//vivaldi/components/history/vivaldi_visit_database.cc",
  ]
}

update_target("//components/sessions:sessions") {
  sources += [
    "//vivaldi/components/sessions/live_tab_context.cc",
    "//vivaldi/components/sessions/tab_restore_service_client.cc",
  ]
}

update_target("//components/sessions:shared") {
  sources += [
    "//vivaldi/components/sessions/vivaldi_session_service_commands.cc",
    "//vivaldi/components/sessions/vivaldi_session_service_commands.h",
  ]
}

update_target("//content/public/browser:browser_sources") {
  sources += [
    "//vivaldi/components/content/vivaldi_web_contents_delegate.cc",
  ]
}

update_target("//content/renderer:renderer") {
  sources += [
    "//vivaldi/components/content/vivaldi_render_views.cc",
  ]
}

update_template_instance("//third_party/blink/renderer/core:core") {
  sources += [
    "//vivaldi/components/blink/vivaldi_add_search_context_menu.cc",
    "//vivaldi/components/blink/vivaldi_add_search_context_menu.h",
    "//vivaldi/components/blink/vivaldi_web_local_frame_impl.cc",
    "//vivaldi/components/blink/vivaldi_web_settings_impl.cc",
    "//vivaldi/components/blink/vivaldi_web_view_impl.cc",
  ]
}

update_template_instance("//third_party/blink/renderer/platform/loader:loader") {
  sources += [
    "//vivaldi/components/blink/vivaldi_resource_fetcher.cc",
  ]
}

update_target("//content/browser:browser") {
  sources += [
    "//vivaldi/components/content/vivaldi_render_frame_host_impl.cc",
    "//vivaldi/components/content/vivaldi_render_view_host_impl.cc",
    "//vivaldi/components/content/vivaldi_renderers.cc",
    "//vivaldi/components/content/vivaldi_storage_partition_impl.cc",
    "//vivaldi/components/content/vivaldi_web_contents.cc",
  ]
  deps += [
    "//components/viz/service",
  ]
}

if (vivaldi_build_tests) {
  update_target("//components:components_unittests") {
    if (!defined(sources)) {
      sources = []
    }
    sources += [ "//vivaldi/components/adverse_adblocking/adverse_ad_filter_list_tests.cc" ]
    deps += [
      "//base/test:test_support",
      "//testing/gtest",
      "//vivaldi/components:adverse_adblocking"
    ]
  }

  update_target("//chrome/test:unit_tests") {
    sources += [
      "//vivaldi/components/adverse_adblocking/adverse_ad_filter_list_unittests.cc",
      "//vivaldi/components/adverse_adblocking/adverse_ad_filter_test_harness.cc"
    ]
    deps += [ "//vivaldi/components:adverse_adblocking" ]
  }

  update_target("//chrome/test:browser_tests") {
    sources += [ "//vivaldi/components/adverse_adblocking/adverse_ad_filter_list_browsertests.cc" ]
    deps += [ "//vivaldi/components:adverse_adblocking" ]
  }

  update_target("//components/guest_view/browser:test_support") {
    sources += [
      "//vivaldi/components/guest_view/vivaldi_guest_view_test_helper.cc",
    ]
  }
}

update_target("//chrome/browser:browser") {
  sources += [
    "//vivaldi/components/capture/capture_page.cc",
    "//vivaldi/components/capture/capture_page.h",
    "//vivaldi/components/capture/thumbnail_capture_contents.cc",
    "//vivaldi/components/capture/thumbnail_capture_contents.h",

    "//vivaldi/components/datasource/vivaldi_data_source_api.cc",
    "//vivaldi/components/datasource/vivaldi_data_source_api.h",
  ]

  if (!is_android) {
    sources += [
      "//vivaldi/components/datasource/css_mods_data_source.cc",
      "//vivaldi/components/datasource/css_mods_data_source.h",
      "//vivaldi/components/datasource/local_image_data_source.cc",
      "//vivaldi/components/datasource/local_image_data_source.h",
      "//vivaldi/components/datasource/notes_attachment_data_source.cc",
      "//vivaldi/components/datasource/notes_attachment_data_source.h",
      "//vivaldi/components/datasource/vivaldi_data_source.cc",
      "//vivaldi/components/datasource/vivaldi_data_source.h",
      "//vivaldi/components/datasource/vivaldi_web_source.cc",
      "//vivaldi/components/datasource/vivaldi_web_source.h",
    ]
    if (is_win) {
      sources += [
        "//vivaldi/components/datasource/desktop_data_source_win.cc",
        "//vivaldi/components/datasource/desktop_data_source_win.h",
      ]
    }
  }
}

if (!is_android) {
  update_target("//chrome/browser/extensions:extensions") {
    sources += [
      "//vivaldi/components/browser/vivaldi_component_loader.cc",
    ]
  }

  update_target("//components/guest_view/browser:browser") {
    sources += [
      "//vivaldi/components/guest_view/vivaldi_guest_view_base.cc",
    ]
    deps += [
      "//components/paint_preview/buildflags",
    ]
  }

  update_target("//components/guest_view/common:common") {
    sources += [
      "//vivaldi/components/guest_view/vivaldi_guest_view_constants.cc",
      "//vivaldi/components/guest_view/vivaldi_guest_view_constants.h"
    ]
  }

  update_target("//components/renderer_context_menu:renderer_context_menu") {
    sources += [
      "//vivaldi/components/menu/vivaldi_toolkit_delegate_views.cc",
    ]
    deps += [
      "//vivaldi/extensions/schema",
    ]
  }

  update_target("//extensions/browser/api:api") {
    sources += [
      "//vivaldi/components/guest_view/vivaldi_guest_view_internal_api.cc",
    ]
  }

  update_target("//extensions/browser:browser_sources") {
    sources += [
      "//vivaldi/components/browser/vivaldi_app_window.cc",
      "//vivaldi/components/guest_view/vivaldi_web_view_permission_helper_delegate.cc",
    ]
  }

  update_target("//extensions/common:common") {
    sources += [
      "//vivaldi/components/extensions/vivaldi_common_features.cc",
    ]
  }

  update_target("//extensions/renderer:renderer") {
    sources += [
      "//vivaldi/components/extensions/vivaldi_mime_handler_view_container_manager.cc",
    ]
  }
}

if (is_mac) {
  update_target("//components/os_crypt:os_crypt") {
    sources += [
      "//vivaldi/components/os_crypt/viv_keychain_password_mac.mm",
    ]
  }

  update_target("//components/remote_cocoa/app_shim:app_shim") {
    sources += [
      "//vivaldi/components/remote_cocoa/app_shim/vivaldi_window_size_helper.h",
      "//vivaldi/components/remote_cocoa/app_shim/vivaldi_window_size_helper.mm",
      "//vivaldi/components/remote_cocoa/app_shim/vivaldi_native_widget_mac_frameless_nswindow.h",
      "//vivaldi/components/remote_cocoa/app_shim/vivaldi_native_widget_mac_frameless_nswindow.mm",
    ]
  }
}

update_target("//third_party/blink/public:blink_headers") {
  sources += [
    "//vivaldi/components/request_filter/adblock_filter/renderer/blink/web_cosmetic_filter_client.h",
  ]
}

update_template_instance("//components/search_engines:prepopulated_engines") {
  source = "$root_gen_dir/components/search_engines/prepopulated_engines.json"
  deps += [ "//vivaldi/components:vivaldi_prepopulated_search_engines" ]
}

update_target("//components/search_engines:prepopulated_engines_action") {
  if (!defined(deps)) {
    deps = []
  }
  deps += [ "//vivaldi/components:vivaldi_prepopulated_search_engines" ]
  args += ["-b", rebase_path("$root_gen_dir/components/search_engines/")]
  outputs = []
  outputs = [
    "$root_gen_dir/components/search_engines/prepopulated_engines.cc",
    "$root_gen_dir/components/search_engines/prepopulated_engines.h",
  ]
}
